# backend/internal/dto/dto_auth.go
@@ -1,0 +1,13 @@
+// Package dto - DTO layer
+package dto
+
+type SignInRequest struct {
+	Username string `json:"username" validate:"required,min=3,max=255"`
+	Password string `json:"password" validate:"required,min=6"`
+}
+
+type SignInResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+	User         User   `json:"user"`
+}
